# silentbridgelite

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  silentbridge-cli.py  silentbridge.py  silentbridged.py
cli/: cli.py
daemon/: daemon.py
silentbridgelite/: silentbridge.py
silentbridgelite/cli/: cli.py
silentbridgelite/common/: common.py
silentbridgelite/daemon/: daemon.py
silentbridgelite/silentbridgelite/: __init__.py
