[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "silentbridgelite"
version = "0.1.1"
authors = [
    { name="Sebastian Bicchi", email="your.email@example.com" }
]
description = "A lightweight network analysis and bridge manipulation tool"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "scapy>=2.6.1",
    "netifaces>=0.11.0",
    "nanpy>=0.9.6",
    "python-daemon>=3.1.2",
    "pyroute2>=0.8.1",
    "psutil>=7.0.0",
    "pyserial>=3.5",
    "requests>=2.32.3",
    "cryptography>=44.0.2",
    "certifi>=2025.1.31",
    "urllib3>=2.3.0",
    "lockfile>=0.12.2",
    "distro>=1.9.0"
]

[project.scripts]
silentbridge-cli = "cli.cli:main"
silentbridged = "daemon.daemon:main"

[tool.setuptools.packages]
find = {} 